Fix Alignment in Footer

--- a/soundfetcher/src/topbar/Topbar.scss
+++ b/soundfetcher/src/topbar/Topbar.scss
@@ -56,6 +56,7 @@
     justify-content: center;
     align-content: center;
     background: rgba(0, 0, 0, 0.5);
+    align-items: center;
   }
 }
 
